syntax = "proto3";

package sample;

// TestMessage is the test message type
message TestMessage {
  string id = 1;
  bool boolean = 2;
  int32 int32type = 3;
  int64 int64type = 4;
  uint32 uint32type = 5;
  uint64 uint64type = 6;
  TestEnum enum = 7;
}

message WithoutComment {
  string id = 1;
}

message EmptyType {
}

// Enum type
enum TestEnum {
  TEST_ENUM_1 = 0;
  TEST_ENUM_2 = 2;
}