syntax = "proto3";

package sample;

import "sample/message.proto";
import "google/api/annotations.proto";

service TestService {
  rpc TestEndpointGet (TestEndpointRequest) returns (TestEndpointResponse) {
    option (google.api.http) = {
      get: "/testbefore/{id}/after"
    };
  }
  rpc TestEndpointPost (TestEndpointRequest) returns (TestEndpointResponse) {
    option (google.api.http) = {
      post: "/testbefore/{id}/after"
    };
  }
}

// TODO Handle case of other service

message TestEndpointRequest {
  string id = 1;
}

message TestEndpointResponse {
  sample.TestMessage message = 1;
}